test/conformance/chainsaw/ttl/delete-twice/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  labels:
    cleanup.kyverno.io/ttl: 10s
spec:
  containers:
  - image: public.ecr.aws/docker/library/nginx:latest
    name: nginx
