test/conformance/chainsaw/ttl/delete-twice/02-check.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  name: check
spec:
  try:
  - error:
      file: pod-assert.yaml
